testing/kuttl/e2e/support-export/22--cleanup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: postgres-operator.crunchydata.com/v1beta1
  kind: PostgresCluster
  name: kuttl-support-cluster
- apiVersion: v1
  kind: LimitRange
  name: kuttl-test-limitrange
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  name: kuttl-test-ingress
