testing/kuttl/e2e/support-export/30--create_cluster_with_other.yaml
# create a PostgresCluster
apiVersion: postgres-operator.crunchydata.com/v1beta1
kind: PostgresCluster
metadata:
  name: kuttl-support-cluster-other
spec:
  postgresVersion: 14
  instances:
    - dataVolumeClaimSpec:
        accessModes: [ReadWriteOnce]
        resources: { requests: { storage: 1Gi } }
  backups:
    pgbackrest:
      repos:
      - name: repo1
        volume:
          volumeClaimSpec:
            accessModes: [ReadWriteOnce]
            resources: { requests: { storage: 1Gi } }
  monitoring:
    pgmonitor:
      exporter: {}
---
# create a LimitRange
apiVersion: v1
kind: LimitRange
metadata:
  name: storagelimits
spec:
  limits:
  - type: PersistentVolumeClaim
    max:
      storage: 2Gi
    min:
      storage: 500Mi

---
# create an Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: simple-example
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
