testing/kuttl/e2e/support-export/32-cleanup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: postgres-operator.crunchydata.com/${PGO_API_VERSION}
  kind: PostgresCluster
  name: kuttl-support-monitoring-cluster
- apiVersion: apps/v1
  kind: Deployment
  name: crunchy-prometheus
- apiVersion: apps/v1
  kind: Deployment
  name: crunchy-grafana
- apiVersion: apps/v1
  kind: Deployment
  name: crunchy-alertmanager
