testing/kuttl/e2e/support-export/22-errors.yaml
apiVersion: postgres-operator.crunchydata.com/${PGO_API_VERSION}
kind: PostgresCluster
metadata:
  name: kuttl-support-cluster
---
apiVersion: v1
kind: LimitRange
metadata:
  name: kuttl-test-limitrange
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuttl-test-ingress
