testing/kuttl/e2e/support-export/32-errors.yaml
apiVersion: postgres-operator.crunchydata.com/${PGO_API_VERSION}
kind: PostgresCluster
metadata:  
  name: kuttl-support-monitoring-cluster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crunchy-prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crunchy-grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crunchy-alertmanager
