testing/kuttl/e2e/support-export/40-errors.yaml
---
apiVersion: postgres-operator.crunchydata.com/v1beta1
kind: PostgresCluster
metadata:
  name: kuttl-support-cluster-other
---
apiVersion: v1
kind: LimitRange
metadata:
  name: storagelimits
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-test-ingress
